# nlp-logistic-regression

./: .pre-commit-config.yaml  pyproject.toml
nlp_logistic_regression/data/: load_data.py
nlp_logistic_regression/predict/: predict.py
nlp_logistic_regression/train/: train.py
